# pingo

./: .gitignore  CMakeLists.txt  linux.7z  math  render
assets/: agonImages.py  obj2vdu.c  teapot.c  teapot.h  viking.blend
example/linux_framebuffer/: linux_framebuffer_backend.c  linux_framebuffer_backend.h  main.c
example/linux_lookaround/: linux_lookaround_backend.c  linux_lookaround_backend.h  main.c
example/linux_window/: linux_backend.c  linux_backend.h  linux_window_backend.c  linux_window_backend.h  main.c
example/render_to_image/: jpeg_backend.c  main.c
example/terminal/: main.c  terminalbackend.c  terminalbackend.h
example/win32_window/: main.c  windowbackend.c  windowbackend.h
linux/: linux_lookaround
math/: mat3.c  mat3.h  mat4.c  mat4.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.h
render/: backend.h  depth.c  depth.h  image.c  image.h  material.h  mesh.c  mesh.h  object.c  object.h  pixel.c  pixel.h  rasterizer.c  rasterizer.h  renderable.c  renderable.h  renderer.c  renderer.h  scene.c  scene.h  sprite.c  sprite.h  texture.c  texture.h
